fixed kerub links

--- a/content/all.html
+++ b/content/all.html
@@ -681,7 +681,7 @@ Seite des Relais Münster aufmerksam. Vielen Dank dafür.</p>
 <h1><p>22.8.2016. Nun gibt es DB0UO und DB0OO nicht mehr. Ende. DF9QM.</p></h1>
 
 <p>Seit dem 22.8.2016 kann man die Relais DB0UO und DB0OO als Oldenburg Land, DB0PDF und Oldenburg Stadt, DB0OL hören. Weiteres auf der Webseite von Uwe (DF3DT) Klaus (DL8BDU) und Peter (DG2BCP)
-Siehe hier: <a href="www.kerub.de">www.kerub.de</a></p> 
+Siehe hier: <a href="http://kerub.de/html/amateurfunk.html">www.kerub.de</a></p> 
     <p style="text-align: center;"><a href="#top">Zum Anfang der Seite</a></p><h2>Vorwort</h2>    
     <p>Wenn man in den Jahren, als die Relais im FM Amateurfunk aufkamen, nicht dabei war, kann man es kaum verstehen, welche Relaiseuphorie damals herrschte. Es war eine völlig neue Art, in guter Tonqualität und ohne große Antennen mit Mobil- und Portabelstationen an großen Runden teilzunehmen. Man fand zu jeder Tageszeit sofort einen Gesprächspartner ohne langes Rufen und Suchen. Vor allem hörte jeder jeden, was auf Direktkanälen je nach Antenne nicht immer der Fall war. Es gab einen Boom für Mobil- und Portabelgeräte, hier speziell das Trio 2200 und das Standard SR-C 145.<p/>
     <p>(Zum Ansehen der alten 2m und 70cm Funkgeräte bitte links auf den entsprechenden Link klicken….)</p>
