--- a/db0uo.html
+++ b/db0uo.html
@@ -834,7 +834,7 @@
                 <p>22.8.2016. Nun gibt es DB0UO und DB0OO nicht mehr. Ende. DF9QM.</p>
 
                 <p>Seit dem 22.8.2016 kann man die Relais DB0UO und DB0OO als Oldenburg Land, DB0PDF und Oldenburg Stadt, DB0OL hören. Weiteres auf der Webseite von Uwe (DF3DT) Klaus (DL8BDU) und Peter (DG2BCP)
-                Siehe hier: <a href="www.kerub.de">www.kerub.de</a></p> 
+                Siehe hier: <a href="http://kerub.de/html/amateurfunk.html">www.kerub.de</a></p> 
 
                 <p style="text-align: center;"><a href="#top">Zum Anfang der Seite</a></p>
 
